Prod-EU/force-app/main/default/objects/Fund__c/Fund__c.object-meta.xml
<CustomObject>
    <description>Object will track information related to Funded Patients.</description>
    <label>Fund</label>
    <nameField>
        <displayFormat>F-{00000}</displayFormat>
        <label>Fund Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>