Prod-EU/force-app/main/default/objects/Fund__c/fields/Amount_Limit__c.field-meta.xml
<CustomField>
    <fullName>Amount_Limit__c</fullName>
    <description>Amount limit enforced in PO</description>
    <label>Amount Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>