Prod-EU/force-app/main/default/objects/Fund__c/fields/Amount_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Amount_Remaining__c</fullName>
    <description>Amount remaining in the fund</description>
    <formula>Amount_Limit__c - Amount_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>