Prod-EU/force-app/main/default/objects/Fund__c/fields/Amount_Used__c.field-meta.xml
<CustomField>
    <fullName>Amount_Used__c</fullName>
    <description>Amount used in the fund</description>
    <label>Amount Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>