Prod-EU/force-app/main/default/objects/Fund__c/fields/Auth_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Auth_Start_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Date when the authorization starts</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Auth Start Date</label>
    <type>Date</type>
</CustomField>