Prod-EU/force-app/main/default/objects/Fund__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>If(OR(BEGINS($Profile.Name , &apos;UK&apos;), BEGINS($Profile.Name , &apos;System&apos;)), &apos;United Kingdom&apos;, &apos;&apos;)</defaultValue>
    <description>Possible countries that can be selected defaulted based on the Profile</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>