Prod-EU/force-app/main/default/objects/Fund__c/fields/Is_Fund_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Fund_Active__c</fullName>
    <description>Check if the current date falls between the Auth start and end date.</description>
    <formula>If(ISBLANK(Auth_End_Date__c), TRUE, If(Today() &lt;=  Auth_End_Date__c, TRUE, FALSE))</formula>
    <label>Is Fund Active?</label>
    <type>Checkbox</type>
</CustomField>