Prod-EU/force-app/main/default/objects/Fund__c/fields/Limit_Type__c.field-meta.xml
<CustomField>
    <fullName>Limit_Type__c</fullName>
    <description>Type of limit enforce in PO</description>
    <label>Limit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quantity</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>