Prod-EU/force-app/main/default/objects/Fund__c/fields/Payor__c.field-meta.xml
<CustomField>
    <fullName>Payor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fund associated with the Payor.</description>
    <label>Payor</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Fund Payor should be of Payor type if using GBP or EUR. Otherwise Fund Currency should be in USD.</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>contains</operation>
            <value>Payor</value>
        </filterItems>
        <filterItems>
            <field>$Source.CurrencyIsoCode</field>
            <operation>equals</operation>
            <value>USD</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fund (Payor)</relationshipLabel>
    <relationshipName>Payor_Fund</relationshipName>
    <type>Lookup</type>
</CustomField>