Prod-EU/force-app/main/default/objects/Fund__c/fields/PO_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Reference_Number__c</fullName>
    <description>Tracks the PO Number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PO Reference Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>