Prod-EU/force-app/main/default/objects/Fund__c/fields/Receiver_Qty_Limit__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Qty_Limit__c</fullName>
    <description>Qty of Receivers that can be used within the Authorized period</description>
    <label>Receiver Qty Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>