Prod-EU/force-app/main/default/objects/Fund__c/fields/Receiver_Qty_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Qty_Remaining__c</fullName>
    <description>Qty of Receiver remaining</description>
    <formula>Receiver_Qty_Limit__c -  Receiver_Qty_Used__c</formula>
    <label>Receiver Qty Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>