Prod-EU/force-app/main/default/objects/Fund__c/fields/Receiver_Qty_Used__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Qty_Used__c</fullName>
    <description>Total number of receiver qty used within the authorized time frame</description>
    <label>Receiver Qty Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>