Prod-EU/force-app/main/default/objects/Fund__c/fields/Sensor_Limit__c.field-meta.xml
<CustomField>
    <fullName>Sensor_Limit__c</fullName>
    <description>Qty of Sensors that can be used within the Authorized period</description>
    <label>Sensor Qty Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>