Prod-EU/force-app/main/default/objects/Fund__c/fields/Sensor_Qty_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Sensor_Qty_Remaining__c</fullName>
    <description>Qty of sensors remaining</description>
    <formula>Sensor_Limit__c -  Sensor_Qty_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sensor Qty Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>