Prod-EU/force-app/main/default/objects/Fund__c/fields/Sensor_Qty_Used__c.field-meta.xml
<CustomField>
    <fullName>Sensor_Qty_Used__c</fullName>
    <description>Total number of sensor qty used within the authorized time frame</description>
    <label>Sensor Qty Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>