Prod-EU/force-app/main/default/objects/Fund__c/fields/Study_Id__c.field-meta.xml
<CustomField>
    <fullName>Study_Id__c</fullName>
    <description>This is the Study Id for Clinincal Studies and is used in Clinical Orders.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the Study Id for Clinincal Studies and is used in Clinical Orders.</inlineHelpText>
    <label>Study Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>