Prod-EU/force-app/main/default/objects/Fund__c/fields/Succeeding_Fund__c.field-meta.xml
<CustomField>
    <fullName>Succeeding_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Succeeding Fund</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Fund</relationshipLabel>
    <relationshipName>Fund</relationshipName>
    <type>Lookup</type>
</CustomField>