Prod-EU/force-app/main/default/objects/Fund__c/fields/Transmitter_Qty_Limit__c.field-meta.xml
<CustomField>
    <fullName>Transmitter_Qty_Limit__c</fullName>
    <description>Qty of Transmitters that can be used within the Authorized period</description>
    <label>Transmitter Qty Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>