Prod-EU/force-app/main/default/objects/Fund__c/fields/Transmitter_Qty_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Transmitter_Qty_Remaining__c</fullName>
    <description>Qty of transmitter remaining</description>
    <formula>Transmitter_Qty_Limit__c -  Transmitter_Qty_Used__c</formula>
    <label>Transmitter Qty Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>