Prod-EU/force-app/main/default/objects/Fund__c/fields/Transmitter_Qty_Used__c.field-meta.xml
<CustomField>
    <fullName>Transmitter_Qty_Used__c</fullName>
    <description>Total number of transmitter qty used within the authorized time frame</description>
    <label>Transmitter Qty Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>