Prod-EU/force-app/main/default/objects/Fund__c/recordTypes/Clinical_Studies_Fund.recordType-meta.xml
<RecordType>
    <fullName>Clinical_Studies_Fund</fullName>
    <active>true</active>
    <description>Fund used for Clinical Studies</description>
    <label>Clinical Studies Fund</label>
</RecordType>