Prod-EU/force-app/main/default/objects/Fund__c/recordTypes/Distributor_Fund.recordType-meta.xml
<RecordType>
    <fullName>Distributor_Fund</fullName>
    <active>true</active>
    <description>Fund for International Distributors</description>
    <label>Distributor Fund</label>
</RecordType>