Prod-EU/force-app/main/default/objects/Fund__c/recordTypes/Purchase_Order.recordType-meta.xml
<RecordType>
    <fullName>Purchase_Order</fullName>
    <active>true</active>
    <description>Purchase Order Recordtype to track the Funds</description>
    <label>Purchase Order</label>
</RecordType>