Prod-EU/force-app/main/default/objects/Fund__c/listViews/View_All_Funds.listView-meta.xml
<ListView>
    <fullName>View_All_Funds</fullName>
    <columns>NAME</columns>
    <columns>Limit_Type__c</columns>
    <columns>Payor__c</columns>
    <columns>PO_Reference_Number__c</columns>
    <columns>Is_Fund_Active__c</columns>
    <columns>Country__c</columns>
    <columns>Amount_Limit__c</columns>
    <columns>Amount_Remaining__c</columns>
    <columns>Auth_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>View All Funds</label>
</ListView>